--- a/PTIT_CNTT4_IT104_Session02/PTIT_CNTT4_IT104_Session02_Bai2/PTIT_CNTT4_IT104_Session02_Bai2.html
+++ b/PTIT_CNTT4_IT104_Session02/PTIT_CNTT4_IT104_Session02_Bai2/PTIT_CNTT4_IT104_Session02_Bai2.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./main.js" type="modunl"></script>
+    <script src="./PTIT_CNTT4_IT104_Session02_Bai2.js"></script>
 </body>
 </html>
